fix some issues with alignment of toggle button

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -33,20 +33,4 @@ body {
     margin-top: 120px;
  }
 
- .top {
-    display: flex;
-    justify-content: flex-end;
- }
-
-.top-button {
-    /* display: none; */
-    position: fixed;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    padding: 10px;
-    background-color: #4056A1;
-    color: #fff;
-    border: none;
-    cursor: pointer; 
-}
+ 
