--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -28,3 +28,18 @@ nav {
     color: red;
     text-align: center;
 }
+
+.top-button {
+    display: none;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    padding: 10px;
+    background-color: #4056A1;
+    color: #fff;
+    border: none;
+    cursor: pointer; 
+}
